@@ -17,9 +17,9 @@
 package org.operaton.commons.utils;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -161,7 +161,7 @@ class CollectionUtilTest {
   void addCollectionToMapOfSetsShouldEliminateDuplicates() {
     Map<String, Set<String>> map = new HashMap<>();
 
-    Collection<String> values = Arrays.asList("a", "b", "c", "a");
+    Collection<String> values = List.of("a", "b", "c", "a");
     CollectionUtil.addCollectionToMapOfSets(map, "key", values);
 
     assertThat(map).hasSize(1).containsKey("key");
@@ -172,9 +172,9 @@ class CollectionUtilTest {
   void addCollectionToMapOfSetsShouldMergeNewValuesWithExistingSet() {
     Map<String, Set<String>> map = new HashMap<>();
 
-    Collection<String> buildValues = Arrays.asList("a", "b", "c");
+    Collection<String> buildValues = List.of("a", "b", "c");
     CollectionUtil.addCollectionToMapOfSets(map, "key", buildValues);
-    Collection<String> appendValues = Arrays.asList("a", "d", "e");
+    Collection<String> appendValues = List.of("a", "d", "e");
     CollectionUtil.addCollectionToMapOfSets(map, "key", appendValues);
 
     assertThat(map).hasSize(1).containsKey("key");
@@ -184,7 +184,7 @@ class CollectionUtilTest {
   @Test
   void addCollectionToMapOfSetsShouldGenerateExceptions() {
     Map<String, Set<String>> map = Collections.unmodifiableMap(new HashMap<>());
-    Collection<String> values = Arrays.asList("a", "b", "c");
+    Collection<String> values = List.of("a", "b", "c");
 
     assertThatThrownBy(() -> CollectionUtil.addCollectionToMapOfSets(map, "key", values))
         .isInstanceOf(UnsupportedOperationException.class);
@@ -194,7 +194,7 @@ class CollectionUtilTest {
 
   @Test
   void partitionShouldSplitListIntoSmallerChunksWithLastPartialChunk() {
-    List<String> original = Arrays.asList("a", "b", "c", "d", "e");
+    List<String> original = List.of("a", "b", "c", "d", "e");
 
     List<List<String>> partitioned = CollectionUtil.partition(original, 2);
 
@@ -207,7 +207,7 @@ class CollectionUtilTest {
 
   @Test
   void partitionShouldKeepOriginalListWhenSizeMatchesPartitionSize() {
-    List<String> original = Arrays.asList("a", "b", "c", "d", "e");
+    List<String> original = List.of("a", "b", "c", "d", "e");
 
     List<List<String>> partitioned = CollectionUtil.partition(original, 5);
 
@@ -222,7 +222,7 @@ class CollectionUtilTest {
 
   @Test
   void collectInListShouldConvertIteratorToArrayList() {
-    List<String> original = Arrays.asList("a", "b", "c");
+    List<String> original = List.of("a", "b", "c");
 
     List<String> result = CollectionUtil.collectInList(original.iterator());
 
@@ -231,8 +231,8 @@ class CollectionUtilTest {
 
   @Test
   void getLastElementShouldReturnLastElementFromListOrSetMember() {
-    Set<String> set = new HashSet<>(Arrays.asList("a", "b", "c"));
-    List<String> list = Arrays.asList("a", "b", "c");
+    Set<String> set = new HashSet<>(List.of("a", "b", "c"));
+    List<String> list = List.of("a", "b", "c");
 
     String lastFromSet = CollectionUtil.getLastElement(set);
     String lastFromList = CollectionUtil.getLastElement(list);
@@ -250,10 +250,24 @@ class CollectionUtilTest {
 
   @Test
   void hasElementsShouldReturnTrueOnlyForNonEmptyCollections() {
-    List<String> list = Arrays.asList("a", "b");
+    List<String> list = List.of("a", "b");
 
     assertThat(CollectionUtil.hasElements(list)).isTrue();
     assertThat(CollectionUtil.hasElements(Collections.emptyList())).isFalse();
     assertThat(CollectionUtil.hasElements(null)).isFalse();
   }
+
+  @Test
+  void toSetShouldConvertEnumerationToSetAndRemoveDuplicates() {
+    // given
+    List<String> list = List.of("a", "b", "a");
+    Enumeration<String> enumeration = Collections.enumeration(list);
+
+    // when
+    Set<String> set = CollectionUtil.toSet(enumeration);
+
+    // then
+    assertThat(set).hasSize(2).containsExactlyInAnyOrder("a", "b");
+  }
 }
+
