@@ -17,7 +17,6 @@
 package org.operaton.bpm.engine.rest;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -49,6 +48,7 @@ import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.Matchers.equalTo;
 import static org.mockito.Mockito.*;
 
+@SuppressWarnings("java:S1874") // Use of synchronous execute() method is a acceptable in test code
 public class ModificationRestServiceInteractionTest extends AbstractRestServiceTest {
 
   @RegisterExtension
@@ -89,7 +89,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
     json.put("skipCustomListeners", true);
     json.put("skipIoMappings", true);
     json.put("processDefinitionId", "processDefinitionId");
-    json.put("processInstanceIds", Arrays.asList("100", "20"));
+    json.put("processInstanceIds", List.of("100", "20"));
     List<Map<String, Object>> instructions = new ArrayList<>();
 
     instructions.add(ModificationInstructionBuilder.cancellation().activityId("activityId").getJson());
@@ -109,7 +109,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
       .post(EXECUTE_MODIFICATION_SYNC_URL);
 
     verify(runtimeServiceMock).createModification("processDefinitionId");
-    verify(modificationBuilderMock).processInstanceIds(Arrays.asList("100", "20"));
+    verify(modificationBuilderMock).processInstanceIds(List.of("100", "20"));
     verify(modificationBuilderMock).cancelAllForActivity("activityId");
     verify(modificationBuilderMock).startBeforeActivity("activityId");
     verify(modificationBuilderMock).startAfterActivity("activityId");
@@ -127,7 +127,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
     Map<String, Object> json = new HashMap<>();
     json.put("skipCustomListeners", true);
     json.put("skipIoMappings", true);
-    json.put("processInstanceIds", Arrays.asList("100", "20"));
+    json.put("processInstanceIds", List.of("100", "20"));
     List<Map<String, Object>> instructions = new ArrayList<>();
 
     instructions.add(ModificationInstructionBuilder.cancellation().activityId("activityId").getJson());
@@ -147,7 +147,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
       .post(EXECUTE_MODIFICATION_ASYNC_URL);
 
     verify(runtimeServiceMock).createModification(null);
-    verify(modificationBuilderMock).processInstanceIds(Arrays.asList("100", "20"));
+    verify(modificationBuilderMock).processInstanceIds(List.of("100", "20"));
     verify(modificationBuilderMock).cancelAllForActivity("activityId");
     verify(modificationBuilderMock).startBeforeActivity("activityId");
     verify(modificationBuilderMock).startAfterActivity("activityId");
@@ -165,7 +165,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
     Map<String, Object> json = new HashMap<>();
     json.put("skipCustomListeners", true);
     json.put("skipIoMappings", true);
-    json.put("processInstanceIds", Arrays.asList("100", "20"));
+    json.put("processInstanceIds", List.of("100", "20"));
     List<Map<String, Object>> instructions = new ArrayList<>();
 
     instructions.add(ModificationInstructionBuilder.cancellation().activityId("activityId").getJson());
@@ -185,7 +185,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
       .post(EXECUTE_MODIFICATION_SYNC_URL);
 
     verify(runtimeServiceMock).createModification(null);
-    verify(modificationBuilderMock).processInstanceIds(Arrays.asList("100", "20"));
+    verify(modificationBuilderMock).processInstanceIds(List.of("100", "20"));
     verify(modificationBuilderMock).cancelAllForActivity("activityId");
     verify(modificationBuilderMock).startBeforeActivity("activityId");
     verify(modificationBuilderMock).startAfterActivity("activityId");
@@ -229,7 +229,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
     instructions.add(ModificationInstructionBuilder.cancellation().activityId("activityId").getJson());
     json.put("processDefinitionId", "processDefinitionId");
     json.put("instructions", instructions);
-    json.put("processInstanceIds", Arrays.asList("100", "20"));
+    json.put("processInstanceIds", List.of("100", "20"));
 
     given()
       .contentType(POST_JSON_CONTENT_TYPE)
@@ -241,7 +241,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
       .post(EXECUTE_MODIFICATION_ASYNC_URL);
 
     verify(runtimeServiceMock).createModification("processDefinitionId");
-    verify(modificationBuilderMock).processInstanceIds(Arrays.asList("100", "20"));
+    verify(modificationBuilderMock).processInstanceIds(List.of("100", "20"));
     verify(modificationBuilderMock).cancelAllForActivity("activityId");
     verify(modificationBuilderMock).startBeforeActivity("activityId");
     verify(modificationBuilderMock).startAfterActivity("activityId");
@@ -550,7 +550,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
     doThrow(new BadUserRequestException("Instructions must be set")).when(modificationBuilderMock).execute();
 
     Map<String, Object> json = new HashMap<>();
-    json.put("processInstanceIds", Arrays.asList("200", "11"));
+    json.put("processInstanceIds", List.of("200", "11"));
     json.put("skipIoMappings", true);
     json.put("processDefinitionId", "processDefinitionId");
 
@@ -570,7 +570,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
   void executeModificationWithNullInstructionsAsync() {
     doThrow(new BadUserRequestException("Instructions must be set")).when(modificationBuilderMock).executeAsync();
     Map<String, Object> json = new HashMap<>();
-    json.put("processInstanceIds", Arrays.asList("200", "11"));
+    json.put("processInstanceIds", List.of("200", "11"));
     json.put("skipIoMappings", true);
     json.put("processDefinitionId", "processDefinitionId");
 
@@ -599,7 +599,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
     instructions.add(ModificationInstructionBuilder.startAfter().activityId("activityId").getJson());
 
     json.put("instructions", instructions);
-    json.put("processInstanceIds", Arrays.asList("200", "323"));
+    json.put("processInstanceIds", List.of("200", "323"));
     json.put("processDefinitionId", "processDefinitionId");
 
     given()
@@ -621,7 +621,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
     List<Map<String, Object>> instructions = new ArrayList<>();
 
     json.put("skipIoMappings", true);
-    json.put("processInstanceIds", Arrays.asList("200", "100"));
+    json.put("processInstanceIds", List.of("200", "100"));
     instructions.add(ModificationInstructionBuilder.startAfter().getJson());
     json.put("instructions", instructions);
     json.put("processDefinitionId", "processDefinitionId");
@@ -645,7 +645,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
     List<Map<String, Object>> instructions = new ArrayList<>();
 
     json.put("skipIoMappings", true);
-    json.put("processInstanceIds", Arrays.asList("200", "100"));
+    json.put("processInstanceIds", List.of("200", "100"));
     instructions.add(ModificationInstructionBuilder.startAfter().getJson());
     json.put("instructions", instructions);
     json.put("processDefinitionId", "processDefinitionId");
@@ -669,7 +669,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
     List<Map<String, Object>> instructions = new ArrayList<>();
 
     json.put("skipIoMappings", true);
-    json.put("processInstanceIds", Arrays.asList("200", "100"));
+    json.put("processInstanceIds", List.of("200", "100"));
     instructions.add(ModificationInstructionBuilder.startBefore().getJson());
     json.put("instructions", instructions);
     json.put("processDefinitionId", "processDefinitionId");
@@ -693,7 +693,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
     List<Map<String, Object>> instructions = new ArrayList<>();
 
     json.put("skipIoMappings", true);
-    json.put("processInstanceIds", Arrays.asList("200", "100"));
+    json.put("processInstanceIds", List.of("200", "100"));
     instructions.add(ModificationInstructionBuilder.startBefore().getJson());
     json.put("instructions", instructions);
     json.put("processDefinitionId", "processDefinitionId");
@@ -717,7 +717,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
     List<Map<String, Object>> instructions = new ArrayList<>();
 
     json.put("skipIoMappings", true);
-    json.put("processInstanceIds", Arrays.asList("200", "100"));
+    json.put("processInstanceIds", List.of("200", "100"));
     instructions.add(ModificationInstructionBuilder.startTransition().getJson());
     json.put("instructions", instructions);
     json.put("processDefinitionId", "processDefinitionId");
@@ -741,7 +741,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
     List<Map<String, Object>> instructions = new ArrayList<>();
 
     json.put("skipIoMappings", true);
-    json.put("processInstanceIds", Arrays.asList("200", "100"));
+    json.put("processInstanceIds", List.of("200", "100"));
     instructions.add(ModificationInstructionBuilder.startTransition().getJson());
     json.put("instructions", instructions);
     json.put("processDefinitionId", "processDefinitionId");
@@ -765,7 +765,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
     List<Map<String, Object>> instructions = new ArrayList<>();
 
     json.put("skipIoMappings", true);
-    json.put("processInstanceIds", Arrays.asList("200", "100"));
+    json.put("processInstanceIds", List.of("200", "100"));
     instructions.add(ModificationInstructionBuilder.cancellation().getJson());
     json.put("instructions", instructions);
     json.put("processDefinitionId", "processDefinitionId");
@@ -789,7 +789,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
     List<Map<String, Object>> instructions = new ArrayList<>();
 
     json.put("skipIoMappings", true);
-    json.put("processInstanceIds", Arrays.asList("200", "100"));
+    json.put("processInstanceIds", List.of("200", "100"));
     instructions.add(ModificationInstructionBuilder.cancellation().getJson());
     json.put("instructions", instructions);
     json.put("processDefinitionId", "processDefinitionId");
@@ -813,7 +813,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
     List<Map<String, Object>> instructions = new ArrayList<>();
 
     json.put("skipIoMappings", true);
-    json.put("processInstanceIds", Arrays.asList("200", "100"));
+    json.put("processInstanceIds", List.of("200", "100"));
     instructions.add(ModificationInstructionBuilder.cancellation().activityId("activityId").cancelCurrentActiveActivityInstances(true).getJson());
     json.put("instructions", instructions);
     json.put("processDefinitionId", "processDefinitionId");
@@ -837,7 +837,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
     List<Map<String, Object>> instructions = new ArrayList<>();
 
     json.put("skipIoMappings", true);
-    json.put("processInstanceIds", Arrays.asList("200", "100"));
+    json.put("processInstanceIds", List.of("200", "100"));
     instructions.add(ModificationInstructionBuilder.cancellation().activityId("activityId").cancelCurrentActiveActivityInstances(true).getJson());
     json.put("instructions", instructions);
     json.put("processDefinitionId", "processDefinitionId");
@@ -861,7 +861,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
     List<Map<String, Object>> instructions = new ArrayList<>();
 
     json.put("skipIoMappings", true);
-    json.put("processInstanceIds", Arrays.asList("200", "100"));
+    json.put("processInstanceIds", List.of("200", "100"));
     instructions.add(ModificationInstructionBuilder.cancellation().activityId("activityId").cancelCurrentActiveActivityInstances(false).getJson());
     json.put("instructions", instructions);
     json.put("processDefinitionId", "processDefinitionId");
@@ -885,7 +885,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
     List<Map<String, Object>> instructions = new ArrayList<>();
 
     json.put("skipIoMappings", true);
-    json.put("processInstanceIds", Arrays.asList("200", "100"));
+    json.put("processInstanceIds", List.of("200", "100"));
     instructions.add(ModificationInstructionBuilder.cancellation().activityId("activityId").cancelCurrentActiveActivityInstances(false).getJson());
     json.put("instructions", instructions);
     json.put("processDefinitionId", "processDefinitionId");
@@ -909,7 +909,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
     List<Map<String, Object>> instructions = new ArrayList<>();
 
     json.put("skipIoMappings", true);
-    json.put("processInstanceIds", Arrays.asList("200", "100"));
+    json.put("processInstanceIds", List.of("200", "100"));
     instructions.add(ModificationInstructionBuilder.cancellation().activityId("activityId").cancelCurrentActiveActivityInstances(false).getJson());
     json.put("instructions", instructions);
     json.put("processDefinitionId", "processDefinitionId");
@@ -936,7 +936,7 @@ public class ModificationRestServiceInteractionTest extends AbstractRestServiceT
     List<Map<String, Object>> instructions = new ArrayList<>();
 
     json.put("skipCustomListeners", true);
-    json.put("processInstanceIds", Arrays.asList("200", "100"));
+    json.put("processInstanceIds", List.of("200", "100"));
     instructions.add(ModificationInstructionBuilder.startBefore().activityId("activityId").getJson());
     json.put("instructions", instructions);
     json.put("processDefinitionId", "processDefinitionId");
