@@ -16,7 +16,6 @@
  */
 package org.operaton.bpm.engine.impl.cmd;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.operaton.bpm.engine.impl.ProcessEngineLogger;
@@ -43,14 +42,14 @@ import org.operaton.bpm.engine.impl.util.ParseUtil;
  * @author Roman Smirnov
  */
 public class DefaultJobRetryCmd extends JobRetryCmd {
-
-  public static final List<String> SUPPORTED_TYPES = Arrays.asList(
+  private static final List<String> SUPPORTED_TYPES = List.of(
       TimerExecuteNestedActivityJobHandler.TYPE,
       TimerCatchIntermediateEventJobHandler.TYPE,
       TimerStartEventJobHandler.TYPE,
       TimerStartEventSubprocessJobHandler.TYPE,
       AsyncContinuationJobHandler.TYPE
   );
+
   private static final JobExecutorLogger LOG = ProcessEngineLogger.JOB_EXECUTOR_LOGGER;
 
   public DefaultJobRetryCmd(String jobId, Throwable exception) {
@@ -92,7 +91,7 @@ public class DefaultJobRetryCmd extends JobRetryCmd {
     }
   }
 
-  protected void executeCustomStrategy(CommandContext commandContext, JobEntity job, ActivityImpl activity) throws Exception {
+  protected void executeCustomStrategy(CommandContext commandContext, JobEntity job, ActivityImpl activity) {
     FailedJobRetryConfiguration retryConfiguration = getFailedJobRetryConfiguration(job, activity);
 
     if (retryConfiguration == null) {
@@ -193,7 +192,7 @@ public class DefaultJobRetryCmd extends JobRetryCmd {
 
   }
 
-  protected DurationHelper getDurationHelper(String failedJobRetryTimeCycle) throws Exception {
+  protected DurationHelper getDurationHelper(String failedJobRetryTimeCycle) {
     return new DurationHelper(failedJobRetryTimeCycle);
   }
 
