@@ -17,7 +17,6 @@
 package org.operaton.bpm.engine.test.api.cmmn;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -1386,17 +1385,14 @@ class CaseServiceTest {
         .singleResult()
         .getId();
 
-    try {
-      // when
-      caseService
+    var caseExecutionCommandBuilder = caseService
         .withCaseExecution(caseExecutionId)
-        .removeVariable("aVariableName")
-        .setVariable("aVariableName", "xyz")
-        .execute();
-    } catch (NotValidException e) {
-      // then
-      testRule.assertTextPresent("Cannot set and remove a variable with the same variable name: 'aVariableName' within a command.", e.getMessage());
-    }
+        .removeVariable("aVariableName");
+
+    // when/then
+    assertThatThrownBy(() -> caseExecutionCommandBuilder.setVariable("aVariableName", "xyz"))
+      .isInstanceOf(NotValidException.class)
+      .hasMessageContaining("Cannot set and remove a variable with the same variable name: 'aVariableName' within a command.");
   }
 
   @Deployment(resources = {"org/operaton/bpm/engine/test/api/cmmn/oneTaskCase.cmmn"})
@@ -1422,17 +1418,14 @@ class CaseServiceTest {
         .singleResult()
         .getId();
 
-    try {
-      // when
-      caseService
+    var caseExecutionCommandBuilder = caseService
         .withCaseExecution(caseExecutionId)
-        .setVariableLocal("aVariableName", "xyz")
-        .removeVariableLocal("aVariableName")
-        .execute();
-    } catch (NotValidException e) {
-      // then
-      testRule.assertTextPresent("Cannot set and remove a variable with the same variable name: 'aVariableName' within a command.", e.getMessage());
-    }
+        .setVariableLocal("aVariableName", "xyz");
+
+    // when/then
+    assertThatThrownBy(() -> caseExecutionCommandBuilder.removeVariableLocal("aVariableName"))
+      .isInstanceOf(NotValidException.class)
+      .hasMessageContaining("Cannot set and remove a variable with the same variable name: 'aVariableName' within a command.");
   }
 
   @Deployment(resources = {"org/operaton/bpm/engine/test/api/cmmn/oneTaskCase.cmmn"})
@@ -1876,7 +1869,7 @@ class CaseServiceTest {
         .withCaseDefinition(caseDefinitionId)
         .setVariable("aVariableName", "abc")
         .setVariable("anotherVariableName", 999)
-        .setVariable("aSerializedObject", Variables.objectValue(Arrays.asList("1", "2")).create())
+        .setVariable("aSerializedObject", Variables.objectValue(List.of("1", "2")).create())
         .create()
         .getId();
 
@@ -1895,7 +1888,7 @@ class CaseServiceTest {
     assertThat(stringValue.getValue()).isNotNull();
     assertThat(objectValue.getValue()).isNotNull();
     assertThat(objectValue.isDeserialized()).isTrue();
-    assertThat(objectValue.getValue()).isEqualTo(Arrays.asList("1", "2"));
+    assertThat(objectValue.getValue()).isEqualTo(List.of("1", "2"));
     assertThat(serializedObjectValue.isDeserialized()).isFalse();
     assertThat(serializedObjectValue.getValueSerialized()).isNotNull();
   }
@@ -2151,7 +2144,7 @@ class CaseServiceTest {
      caseService.withCaseExecution(caseExecutionId)
         .setVariableLocal("aVariableName", "abc")
         .setVariableLocal("anotherVariableName", 999)
-        .setVariableLocal("aSerializedObject", Variables.objectValue(Arrays.asList("1", "2")).create())
+        .setVariableLocal("aSerializedObject", Variables.objectValue(List.of("1", "2")).create())
         .execute();
 
      // when
@@ -2163,7 +2156,7 @@ class CaseServiceTest {
     assertThat(stringValue.getValue()).isNotNull();
     assertThat(objectValue.getValue()).isNotNull();
     assertThat(objectValue.isDeserialized()).isTrue();
-    assertThat(objectValue.getValue()).isEqualTo(Arrays.asList("1", "2"));
+    assertThat(objectValue.getValue()).isEqualTo(List.of("1", "2"));
     assertThat(serializedObjectValue.isDeserialized()).isFalse();
     assertThat(serializedObjectValue.getValueSerialized()).isNotNull();
   }
@@ -2256,7 +2249,7 @@ class CaseServiceTest {
     caseService.removeVariableLocal(caseInstanceId, "aVariableName");
 
     // then the variable should still be there
-    assertThat(runtimeService.createVariableInstanceQuery().count()).isEqualTo(1);
+    assertThat(runtimeService.createVariableInstanceQuery().count()).isOne();
 
     // when
     caseService.removeVariableLocal(caseExecutionId, "aVariableName");
