@@ -15,10 +15,9 @@
  * limitations under the License.
  */
 package org.operaton.bpm.engine.test.api.runtime.migration;
-
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Date;
+import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.TestTemplate;
@@ -50,7 +49,7 @@ public class MigrationActiveEventSubProcessTest {
 
   @Parameters
   public static Collection<Object[]> data() {
-      return Arrays.asList(new Object[][] {
+      return List.of(new Object[][] {
                new Object[]{ new TimerEventFactory() },
                new Object[]{ new MessageEventFactory() },
                new Object[]{ new SignalEventFactory() },
@@ -74,7 +73,7 @@ public class MigrationActiveEventSubProcessTest {
   @TestTemplate
   void testMigrateActiveCompensationEventSubProcess() {
     // given
-    BpmnModelInstance processModel = ProcessModels.ONE_TASK_PROCESS.clone();
+    BpmnModelInstance processModel = ProcessModels.ONE_TASK_PROCESS.copy();
     MigratingBpmnEventTrigger eventTrigger = eventFactory.addEventSubProcess(
         rule.getProcessEngine(),
         processModel,
