@@ -17,8 +17,8 @@
 package org.operaton.bpm.engine.test.api.task;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -57,8 +57,8 @@ class TaskCountByCandidateGroupsTest {
 
   protected String userId = "user";
   protected List<String> tasks = new ArrayList<>();
-  protected List<String> tenants = Arrays.asList("tenant1", "tenant2");
-  protected List<String> groups = Arrays.asList("aGroupId", "anotherGroupId");
+  protected List<String> tenants = List.of("tenant1", "tenant2");
+  protected List<String> groups = List.of("aGroupId", "anotherGroupId");
 
 
   @BeforeEach
@@ -138,8 +138,7 @@ class TaskCountByCandidateGroupsTest {
   }
 
   protected void checkResultCount(TaskCountByCandidateGroupResult result, String expectedResultName, int expectedResultCount) {
-    if((expectedResultName == null && result.getGroupName() == null) ||
-       (result.getGroupName() != null && result.getGroupName().equals(expectedResultName))) {
+    if (Objects.equals(result.getGroupName(), expectedResultName)) {
       assertThat(result.getTaskCount()).isEqualTo(expectedResultCount);
     }
   }
