@@ -15,9 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.bpm.engine.test.standalone.testing;
-
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.junit.Rule;
 import org.junit.Test;
@@ -43,7 +42,7 @@ public class ProcessEngineRuleParameterizedJunit4Test {
 
   @Parameters
   public static Collection<Object[]> data() {
-    return Arrays.asList(new Object[][] {
+    return List.of(new Object[][] {
       { 1 }, { 2 }
     });
   }
