@@ -15,9 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.bpm.model.bpmn.instance;
-
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.operaton.bpm.model.bpmn.impl.instance.ErrorRef;
 import org.operaton.bpm.model.bpmn.impl.instance.InMessageRef;
@@ -35,7 +34,7 @@ public class OperationTest extends BpmnModelElementInstanceTest {
 
   @Override
   public Collection<ChildElementAssumption> getChildElementAssumptions() {
-    return Arrays.asList(
+    return List.of(
       new ChildElementAssumption(InMessageRef.class, 1, 1),
       new ChildElementAssumption(OutMessageRef.class, 0, 1),
       new ChildElementAssumption(ErrorRef.class)
@@ -44,7 +43,7 @@ public class OperationTest extends BpmnModelElementInstanceTest {
 
   @Override
   public Collection<AttributeAssumption> getAttributesAssumptions() {
-    return Arrays.asList(
+    return List.of(
       new AttributeAssumption("name", false, true),
       new AttributeAssumption("implementationRef")
     );
