@@ -15,9 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.bpm.model.bpmn.instance;
-
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -40,7 +39,7 @@ class ProcessTest extends BpmnModelElementInstanceTest {
 
   @Override
   public Collection<ChildElementAssumption> getChildElementAssumptions() {
-    return Arrays.asList(
+    return List.of(
       new ChildElementAssumption(Auditing.class, 0, 1),
       new ChildElementAssumption(Monitoring.class, 0, 1),
       new ChildElementAssumption(Property.class),
@@ -55,11 +54,10 @@ class ProcessTest extends BpmnModelElementInstanceTest {
 
   @Override
   public Collection<AttributeAssumption> getAttributesAssumptions() {
-    return Arrays.asList(
+    return List.of(
       new AttributeAssumption("processType", false, false, ProcessType.None),
       new AttributeAssumption("isClosed", false, false, false),
       new AttributeAssumption("isExecutable"),
-      // TODO: definitionalCollaborationRef
       /** operaton extensions */
       new AttributeAssumption(OPERATON_NS, "candidateStarterGroups"),
       new AttributeAssumption(OPERATON_NS, "candidateStarterUsers"),
@@ -96,10 +94,10 @@ class ProcessTest extends BpmnModelElementInstanceTest {
   void testOperatonHistoryTimeToLive() {
     //given
     Process proc = modelInstance.newInstance(Process.class);
-    assertThat(proc.getOperatonHistoryTimeToLive()).isNull();
+    assertThat(proc.getOperatonHistoryTimeToLiveString()).isNull();
     //when
-    proc.setOperatonHistoryTimeToLive(BpmnTestConstants.TEST_HISTORY_TIME_TO_LIVE);
+    proc.setOperatonHistoryTimeToLiveString(BpmnTestConstants.TEST_HISTORY_TIME_TO_LIVE.toString());
     //then
-    assertThat(proc.getOperatonHistoryTimeToLive()).isEqualTo(BpmnTestConstants.TEST_HISTORY_TIME_TO_LIVE);
+    assertThat(proc.getOperatonHistoryTimeToLiveString()).isEqualTo(BpmnTestConstants.TEST_HISTORY_TIME_TO_LIVE.toString());
   }
 }
