@@ -15,13 +15,12 @@
  * limitations under the License.
  */
 package org.operaton.bpm.model.cmmn.instance.operaton;
-
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.operaton.bpm.model.cmmn.instance.CmmnModelElementInstanceTest;
 
-import static org.operaton.bpm.model.cmmn.impl.CmmnModelConstants.CAMUNDA_NS;
+import static org.operaton.bpm.model.cmmn.impl.CmmnModelConstants.OPERATON_NS;
 
 /**
  * @author Roman Smirnov
@@ -31,24 +30,24 @@ public class OperatonCaseExecutionListenerTest extends CmmnModelElementInstanceT
 
   @Override
   public TypeAssumption getTypeAssumption() {
-    return new TypeAssumption(CAMUNDA_NS, false);
+    return new TypeAssumption(OPERATON_NS, false);
   }
 
   @Override
   public Collection<ChildElementAssumption> getChildElementAssumptions() {
-    return Arrays.asList(
-        new ChildElementAssumption(CAMUNDA_NS, OperatonField.class),
-        new ChildElementAssumption(CAMUNDA_NS, OperatonScript.class, 0, 1)
+    return List.of(
+        new ChildElementAssumption(OPERATON_NS, OperatonField.class),
+        new ChildElementAssumption(OPERATON_NS, OperatonScript.class, 0, 1)
     );
   }
 
   @Override
   public Collection<AttributeAssumption> getAttributesAssumptions() {
-    return Arrays.asList(
-        new AttributeAssumption(CAMUNDA_NS, "event"),
-      new AttributeAssumption(CAMUNDA_NS, "class"),
-      new AttributeAssumption(CAMUNDA_NS, "expression"),
-      new AttributeAssumption(CAMUNDA_NS, "delegateExpression")
+    return List.of(
+        new AttributeAssumption(OPERATON_NS, "event"),
+      new AttributeAssumption(OPERATON_NS, "class"),
+      new AttributeAssumption(OPERATON_NS, "expression"),
+      new AttributeAssumption(OPERATON_NS, "delegateExpression")
     );
   }
 
