@@ -15,11 +15,10 @@
  * limitations under the License.
  */
 package org.operaton.bpm.webapp.plugin.resource;
-
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import jakarta.servlet.ServletContext;
 import jakarta.ws.rs.core.HttpHeaders;
 import jakarta.ws.rs.core.Response;
@@ -41,7 +40,8 @@ import org.operaton.bpm.webapp.plugin.spi.AppPlugin;
 import static org.operaton.bpm.webapp.plugin.resource.AbstractAppPluginRootResource.MIME_TYPE_TEXT_CSS;
 import static org.operaton.bpm.webapp.plugin.resource.AbstractAppPluginRootResource.MIME_TYPE_TEXT_JAVASCRIPT;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.fail;
+import static org.assertj.core.api.Assertions.assertThatCode;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 @Parameterized
 public class AbstractAppPluginRootResourceTest {
@@ -70,7 +70,7 @@ public class AbstractAppPluginRootResourceTest {
 
   @Parameters
   public static Collection<Object[]> getAssets() {
-    return Arrays.asList(new Object[][]{
+    return List.of(new Object[][]{
         {"app/plugin.js", MIME_TYPE_TEXT_JAVASCRIPT, true},
         {"app/plugin.css", MIME_TYPE_TEXT_CSS, true},
         {"app/asset.js", MIME_TYPE_TEXT_JAVASCRIPT, true},
@@ -101,49 +101,39 @@ public class AbstractAppPluginRootResourceTest {
 
   @MethodSource("getAssets")
   @ParameterizedTest
-  void shouldGetAssetIfAllowed(String assetName, String assetMediaType, boolean assetAllowed) throws Exception {
+  void shouldGetAssetIfAllowed(String assetName, String assetMediaType, boolean assetAllowed) {
     initAbstractAppPluginRootResourceTest(assetName, assetMediaType, assetAllowed);
     // given
     String resourceName = "/" + ASSET_DIR + "/" + assetName;
     ByteArrayInputStream inputStream = new ByteArrayInputStream(ASSET_CONTENT.getBytes());
     Mockito.doReturn(inputStream).when(mockServletContext).getResourceAsStream(resourceName);
 
-    try {
-      // when
-      final Response actual = pluginRootResource.getAsset(assetName);
+    if (assetAllowed) {
+      // when/then - should not throw exception
+      assertThatCode(() -> {
+        final Response actual = pluginRootResource.getAsset(assetName);
 
-      // then
-      if (assetAllowed) {
         ByteArrayOutputStream output = new ByteArrayOutputStream();
         ((StreamingOutput) actual.getEntity()).write(output);
 
         assertThat(output).hasToString(ASSET_CONTENT);
         assertThat(actual.getHeaders()).containsKey(HttpHeaders.CONTENT_TYPE).hasSize(1);
         assertThat(actual.getHeaders().get(HttpHeaders.CONTENT_TYPE)).hasSize(1);
-        // In IDE it's String, with maven it's MediaType class
         assertThat(actual.getHeaders().get(HttpHeaders.CONTENT_TYPE).get(0)).hasToString(assetMediaType);
+      }).doesNotThrowAnyException();
 
-        Mockito.verify(runtimeDelegate).getAppPluginRegistry();
-        Mockito.verify(pluginRegistry).getPlugin(PLUGIN_NAME);
-        Mockito.verify(mockServletContext).getResourceAsStream(resourceName);
-      } else {
-        fail("should throw RestException for '%s'", assetName);
-      }
+      Mockito.verify(runtimeDelegate).getAppPluginRegistry();
+      Mockito.verify(pluginRegistry).getPlugin(PLUGIN_NAME);
+      Mockito.verify(mockServletContext).getResourceAsStream(resourceName);
+    } else {
+      // when/then - should throw RestException
+      assertThatThrownBy(() -> pluginRootResource.getAsset(assetName))
+        .isInstanceOf(RestException.class)
+        .hasMessage("Not allowed to load the following file '%s'.".formatted(assetName));
 
-    } catch (RestException e) {
-      // then
-      if (assetAllowed) {
-        e.printStackTrace();
-        fail("should not throw RestException for '%s'", assetName);
-      } else {
-        assertThat(e)
-                .isInstanceOf(RestException.class)
-                .hasMessage("Not allowed to load the following file '" + assetName + "'.");
-
-        Mockito.verify(runtimeDelegate, Mockito.never()).getAppPluginRegistry();
-        Mockito.verify(pluginRegistry, Mockito.never()).getPlugin(PLUGIN_NAME);
-        Mockito.verify(mockServletContext, Mockito.never()).getResourceAsStream(assetName);
-      }
+      Mockito.verify(runtimeDelegate, Mockito.never()).getAppPluginRegistry();
+      Mockito.verify(pluginRegistry, Mockito.never()).getPlugin(PLUGIN_NAME);
+      Mockito.verify(mockServletContext, Mockito.never()).getResourceAsStream(assetName);
     }
   }
 
